--- a/LunchTime_iOS/Storyboards/Xibs/YelpLocationTableViewCell.xib
+++ b/LunchTime_iOS/Storyboards/Xibs/YelpLocationTableViewCell.xib
@@ -28,12 +28,14 @@
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Business Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9FE-WI-6cb">
                         <rect key="frame" x="135" y="13" width="354" height="20.5"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="16615 NW Oakridge dr, Portland " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="84f-Pp-ZG7">
                         <rect key="frame" x="135" y="48.5" width="354" height="17"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -43,6 +45,7 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dM6-j9-Th8">
                                 <rect key="frame" x="0.0" y="0.0" width="171" height="30"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="Select"/>
                                 <connections>
                                     <action selector="selectButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ozj-Vl-OdG"/>
@@ -50,6 +53,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jRs-gf-2D9">
                                 <rect key="frame" x="183" y="0.0" width="171" height="30"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="View in Yelp"/>
                                 <connections>
                                     <action selector="viewInYelpButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="09j-og-7JX"/>
@@ -78,7 +82,7 @@
                 <outlet property="yelpBusinessImage" destination="lJs-oE-OHH" id="dzB-mp-h5Z"/>
                 <outlet property="yelpBusinessName" destination="9FE-WI-6cb" id="pIj-tc-9pO"/>
             </connections>
-            <point key="canvasLocation" x="-47" y="24"/>
+            <point key="canvasLocation" x="-47.5" y="23.5"/>
         </tableViewCell>
     </objects>
 </document>
