--- a/LunchTime_iOS/Storyboards/CreateEvent.storyboard
+++ b/LunchTime_iOS/Storyboards/CreateEvent.storyboard
@@ -23,19 +23,19 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Date and Time" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mz3-K9-Jrf">
+                            <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Date and Time" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mz3-K9-Jrf">
                                 <rect key="frame" x="50" y="155" width="275" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YG1-L2-Jba">
+                            <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Location" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YG1-L2-Jba">
                                 <rect key="frame" x="50" y="255" width="275" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Friends" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nse-BV-7OS">
+                            <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Friends" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nse-BV-7OS">
                                 <rect key="frame" x="50" y="355" width="275" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -95,6 +95,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="locationField" destination="YG1-L2-Jba" id="F3g-Wf-kzD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g3H-EP-duf" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="sfW-NX-2ch" userLabel="Exit" sceneMemberID="exit"/>
@@ -175,9 +178,11 @@
                         <outlet property="foodSearchBar" destination="2Ao-zB-1Bd" id="1Is-IM-gPs"/>
                         <outlet property="locationSearchBar" destination="oW8-Ie-fsC" id="bvr-hH-jhl"/>
                         <outlet property="tableView" destination="EUf-Zz-wJq" id="EqS-Oh-QCc"/>
+                        <segue destination="KpV-cD-EMf" kind="unwind" identifier="unwindFromEventLocation" unwindAction="selectedLocationUnwindWithUnwindSegue:" id="g4b-YM-Rdi"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2jV-Zb-lHK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="KpV-cD-EMf" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="-666.39999999999998" y="1088.0059970014993"/>
         </scene>
