--- a/LunchTime_iOS/Storyboards/HomeScreen.storyboard
+++ b/LunchTime_iOS/Storyboards/HomeScreen.storyboard
@@ -161,39 +161,61 @@
         <!--Friends-->
         <scene sceneID="xWk-zK-nZg">
             <objects>
-                <viewController id="WuP-aj-lLR" sceneMemberID="viewController">
+                <viewController id="WuP-aj-lLR" customClass="FriendsSearchViewController" customModule="LunchTime_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Gab-M1-C6R">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Friends" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CwL-MF-dNb">
-                                <rect key="frame" x="159" y="323" width="57" height="21"/>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="QEa-Tm-jCv">
+                                <rect key="frame" x="0.0" y="76" width="375" height="31"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="cPl-zh-Ipa"/>
-                                    <constraint firstAttribute="width" constant="57" id="xr5-g9-2nq"/>
+                                    <constraint firstAttribute="height" constant="30" id="ynt-7G-O0k"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="JHC-7j-aNz">
+                                <segments>
+                                    <segment title="Friends"/>
+                                    <segment title="Pending"/>
+                                    <segment title="Search"/>
+                                </segments>
+                                <connections>
+                                    <action selector="segmentedControlSelected:" destination="WuP-aj-lLR" eventType="valueChanged" id="e0R-ra-7e2"/>
+                                </connections>
+                            </segmentedControl>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="n2U-q0-sRa">
+                                <rect key="frame" x="0.0" y="106" width="375" height="512"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="JHC-7j-aNz">
                                 <rect key="frame" x="0.0" y="20" width="375" height="56"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="search" enablesReturnKeyAutomatically="YES"/>
+                                <scopeButtonTitles>
+                                    <string>Title</string>
+                                    <string>Title</string>
+                                </scopeButtonTitles>
                             </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="n2U-q0-sRa" firstAttribute="bottom" secondItem="Kqa-XB-AIM" secondAttribute="bottom" id="2nE-W7-Jug"/>
                             <constraint firstItem="JHC-7j-aNz" firstAttribute="top" secondItem="Kqa-XB-AIM" secondAttribute="top" id="7H5-ao-3XO"/>
-                            <constraint firstItem="CwL-MF-dNb" firstAttribute="centerX" secondItem="Gab-M1-C6R" secondAttribute="centerX" id="A6Q-Uf-Wkl"/>
+                            <constraint firstItem="QEa-Tm-jCv" firstAttribute="top" secondItem="JHC-7j-aNz" secondAttribute="bottom" id="Int-ZC-qRx"/>
+                            <constraint firstItem="QEa-Tm-jCv" firstAttribute="centerX" secondItem="Gab-M1-C6R" secondAttribute="centerX" id="LGk-au-GcN"/>
+                            <constraint firstItem="n2U-q0-sRa" firstAttribute="centerX" secondItem="Gab-M1-C6R" secondAttribute="centerX" id="RLm-mQ-zcd"/>
                             <constraint firstItem="JHC-7j-aNz" firstAttribute="leading" secondItem="Kqa-XB-AIM" secondAttribute="leading" id="T0U-2a-Zal"/>
-                            <constraint firstItem="CwL-MF-dNb" firstAttribute="centerY" secondItem="Gab-M1-C6R" secondAttribute="centerY" id="jpy-j5-vFr"/>
+                            <constraint firstItem="QEa-Tm-jCv" firstAttribute="leading" secondItem="Kqa-XB-AIM" secondAttribute="leading" id="VWU-xn-4a5"/>
+                            <constraint firstItem="n2U-q0-sRa" firstAttribute="top" secondItem="QEa-Tm-jCv" secondAttribute="bottom" id="Wuc-yw-gqi"/>
+                            <constraint firstItem="Kqa-XB-AIM" firstAttribute="trailing" secondItem="QEa-Tm-jCv" secondAttribute="trailing" id="XaW-hG-Sf1"/>
+                            <constraint firstItem="n2U-q0-sRa" firstAttribute="leading" secondItem="Kqa-XB-AIM" secondAttribute="leading" id="cqh-nI-lI7"/>
+                            <constraint firstItem="Kqa-XB-AIM" firstAttribute="trailing" secondItem="n2U-q0-sRa" secondAttribute="trailing" id="oY6-rw-Iy4"/>
                             <constraint firstItem="JHC-7j-aNz" firstAttribute="trailing" secondItem="Kqa-XB-AIM" secondAttribute="trailing" id="shr-Kf-6ZN"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Kqa-XB-AIM"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Friends" image="friend" id="vHc-pO-6Ml"/>
                     <connections>
+                        <outlet property="searchBar" destination="JHC-7j-aNz" id="5wA-Ug-eCl"/>
                         <outlet property="searchDisplayController" destination="XFZ-sE-HDq" id="qFf-8h-dMB"/>
+                        <outlet property="segmentControl" destination="QEa-Tm-jCv" id="pkL-XH-3Ik"/>
+                        <outlet property="tableView" destination="n2U-q0-sRa" id="xZv-46-sXk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7sF-fE-0Hm" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -206,7 +228,7 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="-2681" y="914"/>
+            <point key="canvasLocation" x="-2682.4000000000001" y="913.49325337331345"/>
         </scene>
         <!--CreateEvent-->
         <scene sceneID="HlH-ef-FYO">
