--- a/LunchTime_iOS/Storyboards/Xibs/FriendsSearchTableViewCell.xib
+++ b/LunchTime_iOS/Storyboards/Xibs/FriendsSearchTableViewCell.xib
@@ -26,12 +26,13 @@
                             <constraint firstAttribute="width" constant="50" id="vhj-ep-QB2"/>
                         </constraints>
                     </imageView>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gV1-83-Gn4">
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gV1-83-Gn4">
                         <rect key="frame" x="390" y="36.5" width="25" height="25"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="25" id="MM6-lh-1GA"/>
                             <constraint firstAttribute="height" constant="25" id="xml-Fa-S1q"/>
                         </constraints>
+                        <state key="normal" image="addContact"/>
                         <connections>
                             <action selector="addFriendButtonPreesed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="nxz-Ck-RK1"/>
                         </connections>
@@ -65,4 +66,7 @@
             <point key="canvasLocation" x="87.5" y="79"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="addContact" width="25" height="25"/>
+    </resources>
 </document>
