--- a/LunchTime_iOS/Storyboards/CreateEvent.storyboard
+++ b/LunchTime_iOS/Storyboards/CreateEvent.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DE1-DP-TOL">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DE1-DP-TOL">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -89,7 +89,7 @@
                         <viewLayoutGuide key="safeArea" id="gbl-kw-YDV"/>
                     </view>
                     <navigationItem key="navigationItem" id="UGz-3a-91Y">
-                        <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="AdD-P8-UI5">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="AdD-P8-UI5">
                             <connections>
                                 <segue destination="sfW-NX-2ch" kind="unwind" unwindAction="cancelCreateEventWithUnwindSegue:" id="Yyr-qX-anu"/>
                             </connections>
@@ -130,7 +130,7 @@
                                     <constraint firstAttribute="width" constant="40" id="UFN-iF-iwP"/>
                                     <constraint firstAttribute="height" constant="40" id="xgZ-J8-KfX"/>
                                 </constraints>
-                                <state key="normal" image="profile"/>
+                                <state key="normal" image="rightArrow"/>
                                 <connections>
                                     <action selector="searchButtonPressed:" destination="Xyg-si-BgO" eventType="touchUpInside" id="OkM-i1-MC3"/>
                                 </connections>
@@ -232,10 +232,14 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="5SE-eg-tfX"/>
                     </view>
+                    <connections>
+                        <segue destination="KUA-Ug-pNN" kind="unwind" identifier="unwindFromEventFriends" unwindAction="selectedFriendsUnwindWithUnwindSegue:" id="nLM-Se-76e"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Egx-SM-5ft" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="KUA-Ug-pNN" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="210" y="1053"/>
+            <point key="canvasLocation" x="208.80000000000001" y="1052.9235382308846"/>
         </scene>
         <!--Date Selector View Controller-->
         <scene sceneID="FCD-Bn-blZ">
@@ -288,6 +292,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="profile" width="25" height="25"/>
+        <image name="rightArrow" width="25" height="25"/>
     </resources>
 </document>
