--- a/LunchTime_iOS/Storyboards/CreateEvent.storyboard
+++ b/LunchTime_iOS/Storyboards/CreateEvent.storyboard
@@ -62,13 +62,26 @@
                                     <segue destination="Xyg-si-BgO" kind="show" id="DH4-7m-rYl"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rV2-pV-Pz9">
+                                <rect key="frame" x="143" y="565" width="88" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="E30-XR-Jge"/>
+                                    <constraint firstAttribute="width" constant="88" id="htY-Dg-AAG"/>
+                                </constraints>
+                                <state key="normal" title="Create Event"/>
+                                <connections>
+                                    <action selector="createEventButtonPressed:" destination="1XY-vs-UVu" eventType="touchUpInside" id="fLf-HT-lpk"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="nH9-oM-NaD" firstAttribute="centerX" secondItem="Ibk-D2-oFf" secondAttribute="centerX" id="C4S-re-1n2"/>
                             <constraint firstItem="gbl-kw-YDV" firstAttribute="trailing" secondItem="YG1-L2-Jba" secondAttribute="trailing" constant="50" id="Dt6-L8-W7z"/>
+                            <constraint firstItem="gbl-kw-YDV" firstAttribute="bottom" secondItem="rV2-pV-Pz9" secondAttribute="bottom" constant="72" id="JkW-Nl-Hyh"/>
                             <constraint firstItem="gbl-kw-YDV" firstAttribute="trailing" secondItem="Nse-BV-7OS" secondAttribute="trailing" constant="50" id="JyO-Du-lnc"/>
                             <constraint firstItem="gbl-kw-YDV" firstAttribute="trailing" secondItem="mz3-K9-Jrf" secondAttribute="trailing" constant="50" id="LNA-Dv-UOP"/>
+                            <constraint firstItem="rV2-pV-Pz9" firstAttribute="centerX" secondItem="Ibk-D2-oFf" secondAttribute="centerX" id="Myw-Pa-uSj"/>
                             <constraint firstItem="4Af-Ai-OOf" firstAttribute="top" secondItem="Nse-BV-7OS" secondAttribute="bottom" constant="20" id="NaE-dq-V4b"/>
                             <constraint firstItem="4Af-Ai-OOf" firstAttribute="centerX" secondItem="Ibk-D2-oFf" secondAttribute="centerX" id="YTM-s3-MoD"/>
                             <constraint firstItem="Nse-BV-7OS" firstAttribute="leading" secondItem="gbl-kw-YDV" secondAttribute="leading" constant="50" id="a3M-nE-Ch1"/>
