FEATURE: EventsViewModel created and gets user's Events, and specific event info

--- a/LunchTime_iOS/Storyboards/HomeScreen.storyboard
+++ b/LunchTime_iOS/Storyboards/HomeScreen.storyboard
@@ -129,7 +129,7 @@
         <!--Events-->
         <scene sceneID="wV0-ej-wI7">
             <objects>
-                <viewController id="e0j-qM-Q1x" sceneMemberID="viewController">
+                <viewController id="e0j-qM-Q1x" customClass="EventsViewController" customModule="LunchTime_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="eAx-Ku-XLb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
